# Email_Assistent

./: main.py  pyproject.toml  requirements.txt
agents/: categorizer.py  reader.py  responder.py  summarizer.py
config/: env.py
tools/: email_tools.py  reply_tools.py
